# chessua-bengio

./: .gitignore  LICENSE  README.md  benchmarks.sh  main.ipynb  main.py  play_kothserver.py  play_server.py  pyproject.toml  setup.py  tasks.py  versions.json
.github/workflows/: build_test.yml
chessai/: setup.py
chessai/src/: chess.cpp  pybind11_wrapper.cpp  utils.cpp  utils.hpp
chesscpp/: .bazelrc  .test.env  BUILD  Doxyfile  README.md  WORKSPACE  benchmark.ipynb  pybind11_wrapper.cpp  tasks.py  test.cpp
chesscpp/archive/: alpha_beta.cpp  board.cpp  board.hpp  main.cpp  main.hpp  moves.cpp  moves.hpp  pieces.cpp  pieces.hpp  possible_boards.cpp  utils.hpp
chesscpp/dev/: CMakeLists.txt  devutils.cpp  devutils.hpp  main.cpp
chesscpp/include/: bitboard.hpp  bitboard_constants.hpp  bitboard_moves.hpp  bitboard_types.hpp  bitboard_utils.hpp  board_transforms.hpp  collection.hpp  collections.hpp  constants.hpp  conversions.hpp  evaluation_constants.hpp  evaluations.hpp  expressions.hpp  extractions.hpp  main.hpp  moves.hpp  pawn_structure.hpp  pieces.hpp  pstables.hpp  search.hpp  session.hpp  transforms.hpp  transposition.hpp  types.hpp  utils.hpp
chesscpp/test/: CMakeLists.txt  bitboards.cpp  board_transforms.cpp  custom.cpp  custom.hpp  expressions.cpp  main.cpp  possible_boards.cpp  test_collections.cpp  test_expressions.cpp  test_extractions.cpp  test_main.cpp  test_pstables.cpp  test_transforms.cpp  test_transposition.cpp  test_utils.cpp  test_utils.hpp
chesspy/: benchmarks.csv  evaluate.py  game.py  test.py  tournament.json  tournament.py  utils.py
(+226 files in other folders)
