[project]
name = "chess-ai"
version = ""
description = ""
authors = [
    {name = "mx-e", email = "maxi.eissler@gmail.com"},
]
dependencies = [
    "numpy>=1.22.3",
    "chess-ai @ file:///${PROJECT_ROOT}",
]
requires-python = ">=3.9"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pybind11>=2.9.2",
    "setuptools>=62.1.0",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
